[package]
name = "raydium-contract-instructions"
version = "0.1.0"
edition = "2021"


[dependencies]
solana-program = "2.0.15"
spl-token = { version="6.0.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "5.0.1", features = ["no-entrypoint"]}
num-derive = "0.3"
num-traits = "0.2.12"
thiserror = "1.0.20"
